--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ p{
 
 .message{
 	color: #fff;
-    text-shadow: -2px 0 #e700e8, 0 2px #e700e8, 2spx 0 #e700e8, 0 -2px #e700e8;
+    text-shadow: -2px 0 #e700e8, 0 2px #e700e8, 2px 0 #e700e8, 0 -2px #e700e8;
 	font-size: 40px;
 	font-family: 'Roboto', sans-serif;
 	font-weight: bolder;
